--- a/radAR/app/build.gradle
+++ b/radAR/app/build.gradle
@@ -4,6 +4,8 @@ repositories {
     }
 }
 
+apply plugin: 'com.android.application'
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
