--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
+    "del": "^3.0.0",
     "express": "^4.15.4",
-    "mongoose": "^4.11.10",
+    "fs": "0.0.1-security",
+    "mongoose": "^4.11.11",
+    "multer": "^1.3.0",
     "nodemon": "^1.12.0"
   },
   "devDependencies": {
