--- a/radAR/app/build.gradle
+++ b/radAR/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile "com.android.support:support-core-utils:25.4.0"
 
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.android.support:recyclerview-v7:25.4.0'
     compile 'javax.inject:javax.inject:1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
