--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,13 @@
     "fs": "0.0.1-security",
     "mongoose": "^4.11.11",
     "multer": "^1.3.0",
-    "nodemon": "^1.12.0"
+    "nodemon": "^1.12.0",
+    "sinon": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "mock-mongoose-model": "^0.1.0"
   }
 }
