--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,19 @@
   "author": "krusli",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "del": "^3.0.0",
     "express": "^4.15.4",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.0.1",
     "mongoose": "^4.11.11",
     "multer": "^1.3.0",
     "nodemon": "^1.12.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "randomstring": "^1.1.5",
     "sinon": "^3.2.1"
   },
   "devDependencies": {
