--- a/radAR/app/build.gradle
+++ b/radAR/app/build.gradle
@@ -16,6 +16,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -28,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:support-vector-drawable:25.4.0'
+    implementation 'com.android.support:support-v4:25.4.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -53,8 +56,13 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:2.8"
     provided 'javax.annotation:jsr250-api:1.0'
 
+    compile 'com.android.support:design:25.4.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+
 
     testCompile 'junit:junit:4.12'
 
     implementation 'com.android.support:mediarouter-v7:25.4.0'
+    implementation 'com.android.support:cardview-v7:25.4.0'
 }
