--- a/radAR/build.gradle
+++ b/radAR/build.gradle
@@ -1,25 +1,62 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.android.application'
 
-buildscript {
-    repositories {
-        jcenter()
-        google()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+repositories {
+    maven {
+        url 'https://maven.google.com'
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-        google()
+android {
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
+    defaultConfig {
+        applicationId "com.oxygen.radar"
+        minSdkVersion 19
+        targetSdkVersion 25
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+    targetCompatibility 1.8
+        sourceCompatibility 1.8
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile "com.android.support:support-core-utils:25.4.0"
+
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    compile 'com.android.support:recyclerview-v7:25.4.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'javax.inject:javax.inject:1'
+    compile "com.google.dagger:dagger:2.8"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.8"
+    provided 'javax.annotation:jsr250-api:1.0'
+
+    testCompile 'junit:junit:4.12'
+
+    implementation 'com.android.support:mediarouter-v7:25.4.0'
 }
