--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.15.4",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.0.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.11",
     "multer": "^1.3.0",
     "nodemon": "^1.12.0",
