--- a/radAR/app/src/main/AndroidManifest.xml
+++ b/radAR/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">`
+
+        </activity>
+        <activity
+            android:name=".LoginActivity2">
+            android:label="Login2"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
