--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.11",
+    "mongoose-unique-validator": "^1.0.6",
     "multer": "^1.3.0",
     "nodemon": "^1.12.0",
     "passport": "^0.4.0",
