--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SignupActivity">
+        </activity>
+        <activity android:name=".HomeScreenActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeScreenActivity"></activity>
     </application>
 
 </manifest>
