--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
