--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -14,13 +14,15 @@
         <activity android:name=".SignupActivity">
         </activity>
         <activity android:name=".HomeScreenActivity" />
-        <activity android:name=".FriendsActivity"></activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".FriendsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".LoginActivity">
+
         </activity>
     </application>
 
