--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    testCompile 'org.mockito:mockito-all:1.10.19'
+
     compile 'com.android.support:design:26.1.0'
 
     compile 'io.reactivex.rxjava2:rxjava:2.1.1'
