--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -4,6 +4,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -30,6 +39,8 @@
         <activity
             android:name=".ChatsListActivity"
             android:label="@string/title_activity_chats_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ARActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
