--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:11.2.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
