--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "randomstring": "^1.1.5",
-    "sinon": "^3.2.1"
+    "sinon": "^3.2.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
