--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -24,9 +24,7 @@
         <activity
             android:name=".HomeScreenActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity android:name=".FriendsActivity" />
-
         <activity android:name=".LoginActivity" />
         <activity android:name=".UserDetailActivity" />
         <activity
@@ -38,9 +36,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchResultActivity"
+        <activity
+            android:name=".SearchResultActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateVisible|adjustPan"/>
+            android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity
             android:name=".ChatsListActivity"
             android:label="@string/title_activity_chats_list"
@@ -55,7 +54,8 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".FriendRequestActivity"></activity>
     </application>
 
 </manifest>
