--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -24,11 +24,13 @@ android {
 }
 
 
+
 dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.2.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -37,6 +39,7 @@ dependencies {
     testCompile 'org.mockito:mockito-all:1.10.19'
 
     compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:support-v13:26.1.0'
 
     compile 'io.reactivex.rxjava2:rxjava:2.1.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
