--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -25,6 +25,8 @@ android {
 
 dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.2.2'
+    implementation 'com.google.android.gms:play-services-places:11.2.2'
+    implementation 'com.google.android.gms:play-services-location:11.2.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
