--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -49,7 +49,10 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".PlaceActivity"></activity>
+
+        <activity
+            android:name=".PlaceActivity"
+            android:label="@string/title_activity_place"></activity>
     </application>
 
 </manifest>
