Successfully working layout for PlaceActivity

--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -48,11 +48,15 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps">
+
+        </activity>
 
         <activity
             android:name=".PlaceActivity"
-            android:label="@string/title_activity_place"></activity>
+            android:label="@string/title_activity_place">
+
+        </activity>
     </application>
 
 </manifest>
