--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
 
 dependencies {
-    implementation 'com.google.android.gms:play-services-maps:11.2.2'
+    implementation 'com.google.android.gms:play-services-maps:11.4.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -54,4 +54,8 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    implementation 'com.google.android.gms:play-services:11.4.0'
+    compile 'com.android.support:mediarouter-v7:26.1.0'
+
 }
