--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
 
         </activity>
         <activity
-            android:name=".GroupsActivity"
+            android:name=".GroupActivity"
             android:label="@string/title_activity_groups"
             android:theme="@style/AppTheme.NoActionBar">
 
