--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -54,7 +54,9 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
 
-        <activity android:name=".ARActivity2">
+        <activity android:name=".ARActivity2"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
