--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -36,16 +36,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".SearchResultActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustPan" />
-        <activity
-            android:name=".ChatsListActivity"
-            android:label="@string/title_activity_chats_list"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ARActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -57,17 +52,12 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-
-        <activity android:name=".ARActivity2">
-
-        </activity>
+        <activity android:name=".ARActivity2"></activity>
         <activity
             android:name=".GroupsActivity"
             android:label="@string/title_activity_groups"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ChatActivity"></activity>
     </application>
 
 </manifest>
