--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -55,14 +55,15 @@
         <activity
             android:name=".ARActivity2"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".GroupActivity"
             android:label="@string/title_activity_groups"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".ChatListActivity" />
-        <activity android:name=".GroupsListActivity"></activity>
+        <activity android:name=".GroupsListActivity" />
+        <activity android:name=".GroupDetailActivity"></activity>
     </application>
 
 </manifest>
