Fragments activity working

--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -63,7 +63,10 @@
         <activity android:name=".ChatActivity" />
         <activity android:name=".ChatListActivity" />
         <activity android:name=".GroupsListActivity" />
-        <activity android:name=".GroupDetailActivity"></activity>
+        <activity android:name=".GroupDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
