--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
         <activity
             android:name=".FriendsActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".LoginActivity"
-            android:noHistory="true"/>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".UserDetailActivity" />
         <activity
             android:name=".LaunchActivity"
