--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "del": "^3.0.0",
     "express": "^4.15.4",
     "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.11",
