fix unmerged file

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,3 @@
 server.log
-<<<<<<< HEAD
+node_modules
 radar.fadhilanshar.com
-=======
-node_modules/
-radar.fadhilanshar.com/
->>>>>>> 0f8a076091c79bb6598183e1516213b124ffd3e9
