Add Map Activity for Navigation testing

--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".UserDetailActivity" />
-        <activity
-            android:name=".LaunchActivity">
+        <activity android:name=".LaunchActivity">
             android:theme="@style/Theme.AppCompat.Translucent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,15 +37,16 @@
             </intent-filter>
         </activity>
 
-        <!--Tabbed activity-->
+        <!-- Tabbed activity -->
         <activity android:name=".TabbedSearchActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
-
         <activity
             android:name=".SearchResultActivity"
             android:screenOrientation="portrait"
@@ -56,11 +56,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-         <activity
+        <activity
             android:name=".SearchLocationActivity"
-            android:label="radAR Search Location">
-        </activity>
-
+            android:label="radAR Search Location"></activity>
         <activity
             android:name=".ARActivity"
             android:configChanges="orientation"
@@ -69,11 +67,14 @@
         <activity android:name=".GroupsListActivity" />
         <activity
             android:name=".GroupDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ChatListActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".NewGroupActivity"></activity>
+        <activity android:name=".NewGroupActivity" />
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
