--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:11.4.0'
 
     compile 'com.google.maps:google-maps-services:0.1.20'
+    compile 'com.google.maps.android:android-maps-utils:0.5+'
     compile 'com.android.support:mediarouter-v7:26.1.0'
 
 }
