--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 
     testCompile 'org.mockito:mockito-all:1.10.19'
 
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     compile 'de.hdodenhof:circleimageview:2.1.0'
 
     compile 'com.android.support:design:26.1.0'
