--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
             android:name=".GroupsListActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".GroupDetailActivity"
+            android:name=".MeetingPointActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ChatListActivity"
