Run only unit tests

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon",
     "test": "mocha --timeout 10000",
-    "unit": "mocha --grep unit --timeout 10000"
+    "unit": "mocha *_unit.js --timeout 10000"
   },
   "author": "krusli",
   "license": "ISC",
